fix: scrollbar in dark theme

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -1,13 +1,14 @@
+.dark-mode::-webkit-scrollbar-track {
+    background-color: var(--preta);
+}
+.dark-mode::-webkit-scrollbar-thumb {
+    background-color: var(--amarela);
+}
+.dark-mode::-webkit-scrollbar-thumb:hover {
+    background-color: var(--laranja);
+}
+
 .dark-mode {
-    ::-webkit-scrollbar-track {
-        background-color: var(--preta);
-    }
-    ::-webkit-scrollbar-thumb {
-        background-color: var(--amarela);
-    }
-    ::-webkit-scrollbar-thumb:hover {
-        background-color: var(--laranja);
-    }
 
     #conteudo {
         background: linear-gradient(180deg, #211E23 0%, var(--cinza) 100%);
